@@ -1,6 +1,8 @@
 24.oct (ws)
       - fix drawing of shadow notes
       - fix #7402: Split staff drops lower notes
+       (la)
+      - fix #13301: add score.close() to plugin framework
 22.oct (ws)
       - fix #13198: Crash on startup (patch from mokaspar)
 19.oct (lv)
